src/main.css
/* CSS Reset <https://www.joshwcomeau.com/css/custom-css-reset/> */
*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

html,
body {
    height: 100%;
}

body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

input,
button,
textarea,
select {
    font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

/* Colors */
.monster {
    --primary-color: #bdaf7e;
}

.monster.effect {
    --primary-color: #ac6c46;
}

.monster.ritual {
    --primary-color: #206ab3;
}

.monster.fusion {
    --primary-color: #5d3c80;
}

.monster.synchro {
    --primary-color: #acacae;
}

.monster.xyz {
    --primary-color: #1e2628;
}

.monster.link {
    --primary-color: #217ba0;
}

.monster.pendulum {
    --secondary-color: #208f86;
}

.spell {
    --primary-color: #208f86;
}

.trap {
    --primary-color: #a43278;
}

/* User Interface */
.deck-builder {
    display: grid;
    grid-auto-flow: column;
    grid-auto-columns: 1fr;
    grid-template-rows: 100%;

    padding: 1rem;
    gap: 1rem;

    height: 100%;
}

.card-search {
    display: grid;
    grid-template-rows: min-content 1fr;

    gap: 1rem;
}

.drawers {
    display: grid;
    align-content: start;

    gap: 0.5rem;

    overflow: auto;
}

.drawer {
    display: grid;
    grid-template-columns: 1fr min-content;
    grid-template-areas:
        ". ."
        "content content";

    gap: 0.5rem;
}

.drawer .card-list {
    grid-area: content;
}

.deck-view {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-rows: repeat(3, min-content 1fr);

    gap: 0.5rem;
}

.deck-view .card-list {
    grid-column: 1/3;
}

/* Card List */
.card-list {
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;

    padding: 1rem;
    gap: 1rem;

    overflow: auto;

    border: 1px solid black;
    border-radius: 2rem;
}

/* Card */
.card {
    position: relative;

    display: grid;

    border: 1px solid black;
    border-radius: 0.5rem;
    padding: 0.5rem;

    --secondary-color: var(--primary-color);
    background-image: linear-gradient(var(--primary-color) 45%, var(--secondary-color) 55%);
}

.card img {
    border: 1px solid black;
}

.card .usage {
    display: flex;
    gap: 0.1rem;
}

.card .count {
    position: absolute;
    bottom: 1rem;
    right: 1rem;

    text-align: center;

    min-width: 1.5rem;
    border-radius: 1rem;

    background: white;
    border: 1px solid black;
}

.card .tooltip {
    visibility: hidden;

    position: absolute;
    z-index: 9;
    left: calc(100% + 0.5rem);

    background: darkgray;

    border-radius: 0.5rem;
    padding: 0.5rem;
}

.card:hover .tooltip {
    visibility: visible;
}

